environments/informationtechnology-205813/jenkins/webhook/jenkins-webhook-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-webhook
  namespace: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-webhook
    spec:
      containers:
      - name: master
        image: narrativecompany/jenkins-webhook:2018-10-11-6
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: .1
            memory: 64M
          limits:
            cpu: .25
            memory: 256M
      imagePullSecrets:
        - name: narrativecompany-docker
